Padding style added to img.col-sm so all recommended tour images and paragraphs align correctly

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,3 +112,7 @@ footer {
     margin: auto;
 }
 
+img.col-sm {
+    padding: 15px;
+}
+
